--- a/index.html
+++ b/index.html
@@ -738,6 +738,78 @@
 </div>
 
 
+<section class="section hero is-light" id="video_gallery_2_title">
+  <div class="container" style="width: 100vw;">
+    <br>
+    <h2 class="title is-3 has-text-centered">Data Curation Pipeline</h2>
+    <h4 class="subtitle has-text-centered">We present some examples of our proposed tracking pose & mask estimation pipeline to demonstrate its robustness.</h4>
+    <p class="has-text-centered"> Whether using real video input or SMPL motion input, it can obtain individual tracking pose and mask sequences for each person.</p>
+    <br>
+  </div>
+</section>
+
+
+<div class="video_2" id="video_gallery_1" style="width:100%">
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/case_1.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/case_2.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/case_3.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/case_4.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/SMPL-1.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/SMPL-2.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+  <div class="video_wrapper">
+    <div class="video_container">
+    <video autoplay muted loop controls>
+      <source src="static/videos/data_pipe/SMPL-3.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+
+
+</div>
 
   <!-- Image carousel -->
   <!-- <section class="hero is-small">
